test/Fail/ExtLamNotEqual.err
ExtLamNotEqual.agda:11.5-9: error: [UnequalTerms]
The terms
  (λ { zero → zero ; (suc n) → suc n }) x
and
  (λ { zero → zero ; (suc n) → suc n }) x
are not equal at type Nat, because:
  they are distinct extended lambdas;
  one is defined at
     ExtLamNotEqual.agda:7.5-40
  and the other at
     ExtLamNotEqual.agda:8.5-40,
  so they have different internal representations.
when checking that the expression refl has type f ≡ g
